added token auth middleware
