# api/api.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 
 	"github.com/OleksiiPyvovar/companies-crud/pkg/app"
+	"github.com/OleksiiPyvovar/companies-crud/pkg/auth"
 
 	"github.com/julienschmidt/httprouter"
 	"github.com/sirupsen/logrus"
@@ -12,6 +13,7 @@ import (
 
 type Config struct {
 	ServerAddr string
+	APISecret  string
 
 	DBUser    string
 	DBPwd     string
@@ -29,16 +31,17 @@ type API struct {
 	Logger           *log.Logger
 	CompaniesService app.Service
 
-	Config *Config
+	Authorizer auth.Interface
+	Config     *Config
 }
 
 func (a *API) init() {
 
 	a.router.GET("/api/v1/companies", a.CompanyListHandler)
 	a.router.GET("/api/v1/companies/:id", a.CompanyGetByIDHandler)
-	a.router.DELETE("/api/v1/companies/:id", a.CompanyDeleteByIDHandler)
-	a.router.POST("/api/v1/companies/", a.CompanyCreateHandler)
-	a.router.PUT("/api/v1/companies/", a.CompanyUpdateHandler)
+	a.router.DELETE("/api/v1/companies/:id", a.MiddlewareAuthentication(a.CompanyDeleteByIDHandler))
+	a.router.POST("/api/v1/companies/", a.MiddlewareAuthentication(a.CompanyCreateHandler))
+	a.router.PUT("/api/v1/companies/", a.MiddlewareAuthentication(a.CompanyUpdateHandler))
 
 	a.router.ServeFiles("/docs/*filepath", http.Dir("static/swaggerui"))
 }
@@ -53,10 +56,11 @@ func NewAPI(conf *Config, cs app.Service) *API {
 	server := &http.Server{Addr: conf.ServerAddr, Handler: router}
 
 	return &API{
-		router: router,
-		server: server,
-		Config: conf,
-		Logger: logrus.New(),
+		router:     router,
+		server:     server,
+		Config:     conf,
+		Logger:     logrus.New(),
+		Authorizer: auth.New(conf.APISecret),
 
 		CompaniesService: cs,
 	}
